--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,6 @@
 
 	<url>http://openmrs.org</url>
 
-    
 	<modules>
 		<module>api</module>
 		<module>omod</module>
@@ -118,6 +117,8 @@
 
 	<properties>
 		<openMRSVersion>1.9.0</openMRSVersion>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
 
 	<build>
