--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,22 @@
 
         <dependency>
             <groupId>org.openmrs.module</groupId>
+            <artifactId>htmlformentry-omod</artifactId>
+            <version>2.0.4</version>
+            <type>jar</type>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.openmrs.module</groupId>
+            <artifactId>htmlformentry-api</artifactId>
+            <version>2.0.4</version>
+            <type>jar</type>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.openmrs.module</groupId>
             <artifactId>reporting-omod</artifactId>
             <version>0.7.2</version>
             <type>pom</type>
